fix: Update CORS configuration for production frontend in SecurityConfig and WebConfig